--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.4.0</app.runtime>
-		<mule.maven.plugin.version>4.3.1</mule.maven.plugin.version>
-		<munit.version>3.3.2</munit.version>
+		<mule.maven.plugin.version>4.2.0</mule.maven.plugin.version>
+		<munit.version>2.2.5</munit.version>
 	</properties>
 
 	<build>
@@ -156,54 +156,54 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>6.2.1</version>
+			<version>5.1.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>6.2.1</version>
+			<version>5.1.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>6.4.2</version>
+			<version>5.1.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>6.4.2</version>
+			<version>5.1.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>6.2.1</version>
+			<version>5.1.6.RELEASE</version>
 		</dependency>
 				<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-kahadb-store</artifactId>
-			<version>6.1.4</version>
+			<version>5.15.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-client</artifactId>
-			<version>6.1.4</version>
+			<version>5.15.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-broker</artifactId>
-			<version>6.1.4</version>
+			<version>5.15.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mulesoft.munit</groupId>
 			<artifactId>munit-runner</artifactId>
-			<version>3.3.2</version>
+			<version>2.2.5</version>
 			<classifier>mule-plugin</classifier>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.mulesoft.munit</groupId>
 			<artifactId>munit-tools</artifactId>
-			<version>3.3.2</version>
+			<version>2.2.5</version>
 			<classifier>mule-plugin</classifier>
 			<scope>test</scope>
 		</dependency>
@@ -215,25 +215,25 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>12.9.0.jre8-preview</version>
+			<version>7.0.0.jre8</version>
 		</dependency>
 	
 		    	<dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-apikit-module</artifactId>
-            <version>1.11.2</version>
+            <version>1.3.9</version>
             <classifier>mule-plugin</classifier>
         </dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-email-connector</artifactId>
-			<version>1.7.4</version>
+			<version>1.7.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-http-connector</artifactId>
-			<version>1.10.3</version>
+			<version>1.9.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
@@ -245,7 +245,7 @@
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.2.5</version>
+			<version>1.2.4</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
@@ -257,13 +257,13 @@
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-tracing-module</artifactId>
-			<version>1.2.0</version>
+			<version>1.1.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 				<dependency>
 			<groupId>com.ibm.mq</groupId>
 			<artifactId>com.ibm.mq.allclient</artifactId>
-			<version>9.4.1.1</version>
+			<version>9.3.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.modules</groupId>
@@ -281,36 +281,36 @@
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-jms-connector</artifactId>
-			<version>1.9.7</version>
+			<version>1.9.6</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sftp-connector</artifactId>
-			<version>2.4.1</version>
+			<version>2.2.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>com.mulesoft.connectors</groupId>
 			<artifactId>mule-salesforce-connector</artifactId>
-			<version>10.22.4</version>
+			<version>10.21.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-db-connector</artifactId>
-			<version>1.14.13</version>
+			<version>1.14.11</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
-			<version>6.4.2</version>
+			<version>5.8.12</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-wsc-connector</artifactId>
-			<version>1.10.3</version>
+			<version>1.5.8</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 
